// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, compact: true, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(min-width:480px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:760px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:1300px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, compact: true, counter: false and resize: vertical 2`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(min-width:480px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:760px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:1300px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: error, compact: false, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-error-low);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-error);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-error);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: error, compact: true, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-error-low);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-error);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-error);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: none, compact: false, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px) calc(calc(6px + 2.125ex) + calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px));
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-contrast-medium);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: none, compact: true, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px) calc(calc(6px + 2.125ex) + calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px));
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-contrast-medium);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: success, compact: false, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-success-low);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-success-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-success);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-success);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: success, compact: true, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-success-low);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-success-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px) calc(calc(6px + 2.125ex) + calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px));
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-success);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-success);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-contrast-medium);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: error, compact: false, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-error-low);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-error);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-error);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: error, compact: true, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-error-low);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-error);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-error);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: none, compact: false, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px) calc(calc(6px + 2.125ex) + calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px));
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-contrast-medium);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: none, compact: true, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px) calc(calc(6px + 2.125ex) + calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px));
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-primary);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-contrast-medium);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: success, compact: false, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-success-low);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-success-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-success);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-success);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: success, compact: true, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-success-low);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-success-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  cursor: text;
}
textarea:focus {
  border-color: var(--p-color-success);
}
@media(hover:hover) {
  textarea:hover, label:hover~textarea {
    border-color: var(--p-color-success);
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: true, hideLabel: false, state: none, compact: true, counter: true and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted);
  color: var(--p-color-contrast-medium);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px) calc(calc(6px + 2.125ex) + calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px));
  cursor: text;
  border-color: transparent;
}
textarea:focus {
  border-color: var(--p-color-primary);
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-contrast-medium);
  grid-area: 1/1;
  place-self: flex-end;
  margin-inline-end: calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  margin-bottom: calc(11.2px * (var(--p-internal-textarea-scaling) - 0.64285714) + 4px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true, isReadonly: false, hideLabel: true, state: error, compact: false, counter: false and resize: vertical 1`] = `
":host {
  display: block;
  --p-internal-textarea-scaling: 1;
  opacity: 0.4 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  all: unset;
  grid-area: 1/1;
  display: block;
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, 2ch);
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, calc(var(--p-internal-textarea-scaling) * 3.5rem));
  max-height: var(--p-textarea-max-height, unset);
  border: 1px solid var(--p-color-error-low);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  box-sizing: border-box;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: calc(28px * (var(--p-internal-textarea-scaling) - 0.64285714) + 5px) calc(22.4px * (var(--p-internal-textarea-scaling) - 0.64285714) + 8px);
  cursor: not-allowed;
}
textarea:focus {
  border-color: var(--p-color-error);
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
  pointer-events: none;
  justify-self: flex-start;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;
